chore: separate commit message prefix for docker dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -33,6 +33,8 @@ updates:
     directory: "pkg/config/templates"
     schedule:
       interval: "daily"
+    commit-message:
+      prefix: "fix(docker): "
     groups:
       docker-minor:
         exclude-patterns:
