chore: bump openapi spec and overlay

--- a/api/overlay.yaml
+++ b/api/overlay.yaml
@@ -32,6 +32,9 @@ actions:
 - target: $.components.schemas.*.properties.connectionString
   description: Removes deprecated field that conflicts with naming convention
   remove: true
+- target: $.components.schemas.*.properties.region_selection.discriminator
+  description: Replaces discriminated union with concrete type
+  remove: true
 - target: $.components.schemas.*.properties.private_jwk.discriminator
   description: Replaces discriminated union with concrete type
   remove: true
