--- a/internal/start/templates/kong.yml
+++ b/internal/start/templates/kong.yml
@@ -41,7 +41,14 @@ services:
           - /auth/v1/
     plugins:
       - name: cors
-      # TODO: validate apikey
+      - name: request-transformer
+        config:
+          add:
+            headers:
+              - "Authorization: {{ .BearerToken }}"
+          replace:
+            headers:
+              - "Authorization: {{ .BearerToken }}"
   - name: rest-v1
     _comment: "PostgREST: /rest/v1/* -> http://rest:3000/*"
     url: http://{{ .RestId }}:3000/
