--- a/pkg/config/templates/config.toml
+++ b/pkg/config/templates/config.toml
@@ -198,6 +198,12 @@ otp_expiry = 3600
 # subject = "You have been invited"
 # content_path = "./supabase/templates/invite.html"
 
+# Uncomment to customize notification email template
+# [auth.email.template.password_changed_notification]
+# enabled = true
+# subject = "Your password has been changed!"
+# content_path = "./supabase/templates/password_changed_notification.html"
+
 [auth.sms]
 # Allow/disallow new user signups via SMS to your project.
 enable_signup = false
