chore: use `notification_template` as entity type

--- a/pkg/config/templates/config.toml
+++ b/pkg/config/templates/config.toml
@@ -199,9 +199,9 @@ otp_expiry = 3600
 # content_path = "./supabase/templates/invite.html"
 
 # Uncomment to customize notification email template
-# [auth.email.template.password_changed_notification]
+# [auth.email.notification_template.password_changed]
 # enabled = true
-# subject = "Your password has been changed!"
+# subject = "Your password has been changed"
 # content_path = "./supabase/templates/password_changed_notification.html"
 
 [auth.sms]
