--- a/pkg/config/templates/config.toml
+++ b/pkg/config/templates/config.toml
@@ -199,10 +199,10 @@ otp_expiry = 3600
 # content_path = "./supabase/templates/invite.html"
 
 # Uncomment to customize notification email template
-# [auth.email.notification_template.password_changed]
+# [auth.email.notification.password_changed]
 # enabled = true
 # subject = "Your password has been changed"
-# content_path = "./supabase/templates/password_changed_notification.html"
+# content_path = "./templates/password_changed_notification.html"
 
 [auth.sms]
 # Allow/disallow new user signups via SMS to your project.
