--- a/pkg/config/testdata/config.toml
+++ b/pkg/config/testdata/config.toml
@@ -207,6 +207,12 @@ sender_name = "Admin"
 subject = "You have been invited"
 content_path = "./supabase/templates/invite.html"
 
+# Uncomment to customize notification email template
+[auth.email.notification.password_changed]
+enabled = true
+subject = "Your password has been changed"
+content_path = "./templates/password_changed_notification.html"
+
 [auth.sms]
 # Allow/disallow new user signups via SMS to your project.
 enable_signup = true
