chore: remove GH_PAT usage and NPM_TOKEN
All npm publishing must be done through Trusted Publisher.
GH_PAT should not be used and a dedicated GitHub app with tightly scoped
permissions is to be used instead.

--- a/.github/workflows/api-sync.yml
+++ b/.github/workflows/api-sync.yml
@@ -41,7 +41,6 @@ jobs:
         id: cpr
         uses: peter-evans/create-pull-request@v7
         with:
-          token: ${{ secrets.GH_PAT }}
           commit-message: "chore: sync API types from infrastructure"
           title: "chore: sync API types from infrastructure"
           body: |
@@ -58,4 +57,4 @@ jobs:
         if: steps.check.outputs.has_changes == 'true'
         run: gh pr merge --auto --squash "${{ steps.cpr.outputs.pull-request-number }}"
         env:
-          GH_TOKEN: ${{ secrets.GH_PAT }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
