--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -1,6 +1,9 @@
 name: Release (Beta)
 
 on:
+  pull_request_review:
+    types:
+      - submitted
   push:
     branches:
       - develop
@@ -10,6 +13,35 @@ permissions:
   contents: read
 
 jobs:
+  approved:
+    if: |
+      github.event.pull_request.head.ref == 'develop' &&
+      github.event.pull_request.base.ref == 'main' &&
+      github.event.review.state == 'approved'
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v6
+        with:
+          fetch-depth: 0
+      - run: |
+          git checkout main
+          git merge --ff-only "${{ github.event.pull_request.head.sha }}"
+          git push origin main
+
+  deploy:
+    needs:
+      - approved
+    permissions:
+      contents: write
+      packages: write
+      # Required for npm OIDC
+      id-token: write
+    # Call workflow explicitly because events from actions cannot trigger more actions
+    uses: ./.github/workflows/release.yml
+    secrets: inherit
+
   release:
     name: semantic-release
     runs-on: ubuntu-latest
