--- a/.github/workflows/release-beta.yml
+++ b/.github/workflows/release-beta.yml
@@ -14,6 +14,7 @@ permissions:
 
 jobs:
   approved:
+    name: fast-forward
     if: |
       github.event.pull_request.head.ref == 'develop' &&
       github.event.pull_request.base.ref == 'main' &&
@@ -21,6 +22,9 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       contents: write
+      packages: write
+    outputs:
+      release_tag: ${{ steps.latest-release.outputs.tagName }}
     steps:
       - uses: actions/checkout@v6
         with:
@@ -29,21 +33,46 @@ jobs:
           git checkout main
           git merge --ff-only "${{ github.event.pull_request.head.sha }}"
           git push origin main
+      - id: latest-release
+        run: |
+          latest=$(gh release list --limit 1 --json tagName --jq '.[].tagName')
+          gh release edit $latest --latest --prerelease=false
+          echo "tagName=$latest" >> $GITHUB_OUTPUT
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+  tag:
+    name: Move latest tag
+    needs:
+      - approved
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      # Required for npm OIDC
+      id-token: write
+    steps:
+      - uses: actions/checkout@v6
+      - uses: actions/setup-node@v6
+        with:
+          node-version: latest
+          registry-url: https://registry.npmjs.org
+      - run: npm dist-tag add "supabase@${RELEASE_TAG#v}" latest
+        env:
+          RELEASE_TAG: ${{ needs.approved.outputs.release_tag }}
 
   deploy:
     needs:
       - approved
-    permissions:
-      contents: write
-      packages: write
-      # Required for npm OIDC
-      id-token: write
+      - tag
     # Call workflow explicitly because events from actions cannot trigger more actions
     uses: ./.github/workflows/release.yml
+    with:
+      release: ${{ needs.approved.outputs.release_tag }}
     secrets: inherit
 
   release:
     name: semantic-release
+    if: ${{ github.event_name != 'pull_request_review' }}
     runs-on: ubuntu-latest
     permissions:
       contents: write
